--- a/style_dark.css
+++ b/style_dark.css
@@ -58,4 +58,5 @@ pre {
   border-color: #686F8A;
   border-width: 1px;
   padding: 7px;
+  overflow-x: auto;
 }
